Updated the landing page - still a lot to do

--- a/index.html
+++ b/index.html
@@ -18,40 +18,45 @@
         </ul>
     </div>
   
-    <div class="Contents">
+    <div class="contents">
 
-        <div>
-            This website is awesome
+        <div class="intro" style="background-color: #1F2937;">
+            <div class="left-side">
+                <p style="font-size: 48px; font-weight: 900; color: white;">Welcome to Knitted Odin Shop!</p>
+                <button>Shop now</button>
+            </div>
+            <img src="assets/main.jpeg" alt="Viking image">
         </div>
 
         <div class="cards">
-            Here are just some of our fearsest champions:   
+            Here are just some of our fearsest knitted champions:   
             <ul class="card-list">
                 <li>
                     <div class="card">
-                        <img src="assets/images.jpeg">
+                        <img src="assets/knitted1.jpeg">
                     </div>
                 </li>
                 <li>
                     <div class="card">
-                        <img src="assets/images.jpeg">
+                        <img src="assets/knitted2.jpeg">
                     </div>
                 </li>
                 <li>
                     <div class="card">
-                        <img src="assets/images.jpeg">
+                        <img src="assets/knitted3.jpeg">
                     </div>
                 </li>
                 <li>
                     <div class="card">
-                        <img src="assets/images.jpeg">
+                        <img src="assets/knitted4.jpeg">
                     </div>
                 </li>
             </ul>
         </div>
 
         <div class="quote">
-            "Banana"
+            <blockquote>I’m beyond impressed with these knitted Viking toys! The craftsmanship is outstanding—every detail from the tiny helmets to the braided beards shows so much care and creativity. They’re soft, durable, and perfect both as collectibles and as gifts for kids. Shipping was quick, and the packaging made it feel extra special. I’ll definitely be coming back for more—these are truly unique treasures!</blockquote>
+            <h5>-A happy customer</h5>
         </div>
 
         <div class="action">
