Finalized the landing page

--- a/index.html
+++ b/index.html
@@ -20,19 +20,17 @@
         </ul>
     </nav>
 
-    <header class="hero">
-        <div class="container" style="background-color: #1F2937;">
-            <div class="left-side" style="width: 700px;">
-                <h1 style="color: white; font-size: 48px;">Welcome to Knitted Odin Shop!</h1>
-                <p style="color: white; font-size: 24px;">Centuries of raiding and pillaging have
-                    filled our hearts with glee. Yet, braving the sea remains a miserable ordeal—waves, storms, and the
+    <header class="intro">
+        <div class="container">
+            <div class="left-side">
+                <h1>Welcome to Knitted Odin Shop!</h1>
+                <p>Centuries of raiding and pillaging have
+                    filled our hearts with glee. Yet, braving the sea remains a miserable ordeal - waves, storms, and the
                     occasional seasick warrior. Thankfully, the legendary Ragnar Lothbrok once stumbled upon the
                     glorious pastime of knitting, a craft that kept his hands busy and his sanity intact through the
                     fiercest tempests. Ever since, we've proudly upheld his tradition, producing knitted treasures as
-                    fine as our battle axes—though considerably less dangerous</p>
-                <button
-                    style="border-radius: 10px; background-color: #3882F6; color: white; width: 150px; height: 50px; font-size: 20px;">Shop
-                    now</button>
+                    fine as our battle axes - though considerably less dangerous</p>
+                <button>Shop now</button>
             </div>
             <img src="assets/main.jpeg" alt="Viking image">
         </div>
@@ -40,7 +38,7 @@
 
     <section class="cards">
         <div class="container">
-            <h3>Here are just some of our fearsest knitted champions:</h3>
+            <h4>Here are just some of our fearsest knitted champions:</h4>
             <ul class="card-list">
                 <li>
                     <div class="card">
@@ -68,17 +66,17 @@
 
     <section class="quote">
         <div class="container">
-            <blockquote>I’m beyond impressed with these knitted Viking toys! The craftsmanship is outstanding—every
-                detail from the tiny helmets to the braided beards shows so much care and creativity. They’re soft,
+            <blockquote>I'm beyond impressed with these knitted Viking toys! The craftsmanship is outstanding—every
+                detail from the tiny helmets to the braided beards shows so much care and creativity. They're soft,
                 durable, and perfect both as collectibles and as gifts for kids. Shipping was quick, and the packaging
-                made it feel extra special. I’ll definitely be coming back for more—these are truly unique treasures!
+                made it feel extra special. I'll definitely be coming back for more—these are truly unique treasures!
             </blockquote>
             <h5>-A Lindisfarne man of the cloth</h5>
         </div>
     </section>
 
     <section class="action">
-        <div class="contianer">
+        <div class="container">
             <div class="action-text">
                 <h2>Call to action! It's time!</h2>
                 <p>Sign up for our newsletter to stay updated on the latest knitted Viking news and exclusive offers!
