--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section class="cards">
         <div class="container">
-            <h4>Here are just some of our fearsest knitted champions:</h4>
+            <h4>Here are just some of our fiercest knitted champions:</h4>
             <ul class="card-list">
                 <li>
                     <div class="card">
